--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,4 @@
-@import url(fontawesome-all.min.css);
+@import url(all.css);
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,600,700,300i,600i,700i|Raleway:600,800");
 
 /*
@@ -2483,9 +2483,11 @@ input, select, textarea {
 		}
 
 		.image.fit {
-			display: block;
+			display: flex;
 			margin: 0 0 2rem 0;
-			width: 100%;
+			width: 200px;
+			align-items: : center;
+			justify-content: center
 		}
 
 			.image.fit img {
